fix: too much left padding in mobile viewport

--- a/express/styles/styles.css
+++ b/express/styles/styles.css
@@ -569,7 +569,7 @@ main .section-wrapper:last-of-type {
 main .section-wrapper > div {
     margin: auto;
     max-width: 672px;
-    padding: 0 32px;
+    padding: 0;
 }
 
 main .section-wrapper > div:empty {
